--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "clsx": "^2.1.1",
     "framer": "^2.4.1",
     "lucide-react": "^0.346.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^3.1.0",
     "tsparticles": "^3.8.1",
     "typewriter-effect": "^2.21.0"
   },
